vendor/fixed-macro/tests/compile-fail/neg-for-unsigned.rs
fn main() {
    fixed_macro::fixed!(-1.23: U4F4);
}
