vendor/fixed-macro/tests/compile-fail/neg-for-unsigned.stderr
error: negative value for an unsigned fixed type
 --> $DIR/neg-for-unsigned.rs:2:26
  |
2 |     fixed_macro::fixed!(-1.23: U4F4);
  |                          ^^^^
